--- a/GUI/Views/UserServicesView.xaml
+++ b/GUI/Views/UserServicesView.xaml
@@ -62,7 +62,7 @@
 
                     <Label Grid.Column="0"
                            Content="Service :"/>
-                    <TextBox Grid.Column="1"
+                    <TextBox Name="_serviceFilter_TB" Grid.Column="1"
                              Text="{Binding ServiceFilter, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}"/>
                     <Label Grid.Column="2"
                            Content="Indentifier :"/>
