--- a/GUI/Views/PasswordGeneratorView.xaml
+++ b/GUI/Views/PasswordGeneratorView.xaml
@@ -55,8 +55,7 @@
                 </MenuItem>
             </Menu>
             <StackPanel>
-                <TextBox FontFamily="Courier New"
-                         FontSize="20"
+                <TextBox FontSize="20"
                          Text="{Binding GeneratedPassword, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}"/>
                 <StackPanel Orientation="Horizontal">
                     <CheckBox IsChecked="{Binding IncludeNumerics}">
@@ -75,7 +74,6 @@
                 <TextBox Height="65"
                          AcceptsReturn="True"
                          TextWrapping="Wrap"
-                         FontFamily="Courier New"
                          FontSize="18"
                          Text="{Binding Alphabet, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}"/>
             </StackPanel>
