Save NeedsReview state

--- a/GUI/Views/UserLogsView.xaml
+++ b/GUI/Views/UserLogsView.xaml
@@ -18,7 +18,7 @@
             <RowDefinition Height="*"/>
         </Grid.RowDefinitions>
         <StackPanel Grid.Row="0">
-            <GroupBox Header="Filters">
+            <GroupBox Header="{Binding FiltersHeader}">
                 <Grid>
                     <Grid.ColumnDefinitions>
                         <ColumnDefinition Width="Auto"/>
@@ -73,18 +73,16 @@
                         </Style>
                     </DataGridTextColumn.ElementStyle>
                 </DataGridTextColumn>
-                <DataGridCheckBoxColumn Header="Needs review"
+                <DataGridTemplateColumn Header="Needs review"
                                         Width="Auto"
-                                        Binding="{Binding NeedsReview}"
                                         CanUserSort="True">
-                    <DataGridCheckBoxColumn.ElementStyle>
-                        <Style TargetType="CheckBox">
-                            <Setter Property="VerticalAlignment" Value="Center" />
-                            <Setter Property="HorizontalAlignment" Value="Center" />
-                            <Setter Property="Margin" Value="5"/>
-                        </Style>
-                    </DataGridCheckBoxColumn.ElementStyle>
-                </DataGridCheckBoxColumn>
+                    <DataGridTemplateColumn.CellTemplate>
+                        <DataTemplate>
+                            <CheckBox IsChecked="{Binding NeedsReview, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}"
+                                      Content="{Binding NeedsReviewString}"/>
+                        </DataTemplate>
+                    </DataGridTemplateColumn.CellTemplate>
+                </DataGridTemplateColumn>
                 <DataGridTextColumn Header="Event type"
                                     IsReadOnly="True"
                                     Width="Auto"
