--- a/GUI/Views/PasswordGeneratorView.xaml
+++ b/GUI/Views/PasswordGeneratorView.xaml
@@ -28,7 +28,7 @@
                 <MenuItem Height="40"
                           Name="_insert"
                           Click="_insertMenuItem_Click"
-                          Visibility="Hidden"
+                          Visibility="Collapsed"
                           Header="_Insert"/>
                 <MenuItem Height="40"
                           HorizontalAlignment="Right">
