--- a/GUI/Views/UserServicesView.xaml
+++ b/GUI/Views/UserServicesView.xaml
@@ -41,9 +41,28 @@
                           Click="_userSettings_MenuItem_Click"/>
                 <MenuItem Header="_Generate random Password"
                           Click="_generateRandomPassword_MenuItem_Click"/>
-                <MenuItem Header="{Binding ShowWarning}"/>
                 <MenuItem Header="_Show activities"
                           Click="_showActivities_MenuItem_Click"/>
+                <MenuItem Name="_warnings_MI"
+                          Header="{Binding ShowWarnings}"
+                          Foreground="{Binding ShowWarningsColor}">
+                    <MenuItem Name="_activityWarnings_MI"
+                              Header="{Binding ShowActivityWarnings}"
+                              Foreground="Yellow"
+                              Click="_activityWarnings_MI_Click"/>
+                    <MenuItem Name="_duplicatedPasswordWarnings_MI"
+                              Header="{Binding ShowDuplicatedPasswordWarnings}"
+                              Foreground="Yellow"
+                              Click="_duplicatedPasswordWarnings_MI_Click"/>
+                    <MenuItem Name="_expiredPasswordWarnings_MI"
+                              Header="{Binding ShowExpiredPasswordWarnings}"
+                              Foreground="Red"
+                              Click="_expiredPasswordWarnings_MI_Click"/>
+                    <MenuItem Name="_leakedPasswordWarnings_MI"
+                              Header="{Binding ShowLeakedPasswordWarnings}"
+                              Foreground="Red"
+                              Click="_leakedPasswordWarnings_MI_Click"/>
+                </MenuItem>
                 <MenuItem Header="_Logout"
                           HorizontalAlignment="Right"
                           Click="_logout_MenuItem_Click"/>
