--- a/GUI/Views/AccountPasswordsWarningView.xaml
+++ b/GUI/Views/AccountPasswordsWarningView.xaml
@@ -1,11 +1,11 @@
-﻿<Window x:Class="Upsilon.Apps.Passkey.GUI.Views.UserActivitiesView"
+﻿<Window x:Class="Upsilon.Apps.Passkey.GUI.Views.AccountPasswordsWarningView"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:Upsilon.Apps.Passkey.GUI.Views"
         xmlns:viewmodels="clr-namespace:Upsilon.Apps.Passkey.GUI.ViewModels"
-        d:DataContext="{d:DesignInstance Type=viewmodels:UserActivitiesViewModel}"
+        d:DataContext="{d:DesignInstance Type=viewmodels:AccountPasswordsWarningViewModel}"
         mc:Ignorable="d"
         WindowState="Maximized"
         WindowStartupLocation="CenterScreen"
@@ -18,7 +18,7 @@
             <RowDefinition Height="*"/>
         </Grid.RowDefinitions>
         <StackPanel Grid.Row="0">
-            <GroupBox Header="{Binding FiltersHeader}">
+            <GroupBox Header="Filters : ">
                 <Grid>
                     <Grid.ColumnDefinitions>
                         <ColumnDefinition Width="Auto"/>
@@ -26,45 +26,28 @@
                         <ColumnDefinition Width="Auto"/>
                         <ColumnDefinition Width="*"/>
                         <ColumnDefinition Width="Auto"/>
-                        <ColumnDefinition Width="*"/>
-                        <ColumnDefinition Width="Auto"/>
-                        <ColumnDefinition Width="*"/>
-                        <ColumnDefinition Width="Auto"/>
-                        <ColumnDefinition Width="Auto"/>
                     </Grid.ColumnDefinitions>
 
                     <Label Grid.Column="0"
-                           Content="From :"/>
-                    <DatePicker Grid.Column="1"
-                                SelectedDate="{Binding FromDateFilter, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}"/>
+                           Content="Warning type :"/>
+                    <ComboBox Name="_warningType_CB" SelectedItem="{Binding ReadableWarningType, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}"
+                              Grid.Column="1"/>
                     <Label Grid.Column="2"
-                           Content="To :"/>
-                    <DatePicker Grid.Column="3"
-                                SelectedDate="{Binding ToDateFilter, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}"/>
-                    <Label Grid.Column="4"
-                           Content="Event type :"/>
-                    <ComboBox Name="_eventType_CB"
-                              SelectedItem="{Binding ReadableEventType, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}"
-                              Grid.Column="5"/>
-                    <Label Grid.Column="6"
-                           Content="Message :"/>
-                    <TextBox Grid.Column="7"
-                             Text="{Binding Message, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}"/>
-                    <CheckBox Grid.Column="8"
-                              Content="Needs review only"
-                              IsChecked="{Binding NeedsReview}"/>
-                    <Button Grid.Column="9"
+                           Content="Text :"/>
+                    <TextBox Grid.Column="3"
+                             Text="{Binding Text, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}"/>
+                    <Button Grid.Column="4"
                             Content="✕"
                             Click="_filterClear_Button_Click"/>
                 </Grid>
             </GroupBox>
         </StackPanel>
-        <DataGrid Name="_activities_DGV" Grid.Row="1" AutoGenerateColumns="False">
+        <DataGrid Name="_warnings_DGV" Grid.Row="1" AutoGenerateColumns="False">
             <DataGrid.Columns>
-                <DataGridTextColumn Header="Date and Time"
+                <DataGridTextColumn Header="Warning type"
                                     IsReadOnly="True"
                                     Width="Auto"
-                                    Binding="{Binding DateTime}"
+                                    Binding="{Binding ReadableWarningType}"
                                     CanUserSort="True">
                     <DataGridTextColumn.ElementStyle>
                         <Style TargetType="TextBlock">
@@ -73,32 +56,10 @@
                         </Style>
                     </DataGridTextColumn.ElementStyle>
                 </DataGridTextColumn>
-                <DataGridTemplateColumn Header="Needs review"
-                                        Width="Auto"
-                                        CanUserSort="True">
-                    <DataGridTemplateColumn.CellTemplate>
-                        <DataTemplate>
-                            <CheckBox IsChecked="{Binding NeedsReview, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}"
-                                      Content="{Binding NeedsReviewString}"/>
-                        </DataTemplate>
-                    </DataGridTemplateColumn.CellTemplate>
-                </DataGridTemplateColumn>
-                <DataGridTextColumn Header="Event type"
-                                    IsReadOnly="True"
-                                    Width="Auto"
-                                    Binding="{Binding EventType}"
-                                    CanUserSort="True">
-                    <DataGridTextColumn.ElementStyle>
-                        <Style TargetType="TextBlock">
-                            <Setter Property="VerticalAlignment" Value="Center" />
-                            <Setter Property="Margin" Value="5"/>
-                        </Style>
-                    </DataGridTextColumn.ElementStyle>
-                </DataGridTextColumn>
-                <DataGridTextColumn Header="Message"
+                <DataGridTextColumn Header="Service"
                                     Width="*"
                                     IsReadOnly="True"
-                                    Binding="{Binding Message}"
+                                    Binding="{Binding ServiceString}"
                                     CanUserSort="True">
                     <DataGridTextColumn.ElementStyle>
                         <Style TargetType="TextBlock">
@@ -108,7 +69,20 @@
                         </Style>
                     </DataGridTextColumn.ElementStyle>
                 </DataGridTextColumn>
-                <DataGridTemplateColumn Header="Go to item">
+                <DataGridTextColumn Header="Account"
+                                    Width="*"
+                                    IsReadOnly="True"
+                                    Binding="{Binding AccountString}"
+                                    CanUserSort="True">
+                    <DataGridTextColumn.ElementStyle>
+                        <Style TargetType="TextBlock">
+                            <Setter Property="TextWrapping" Value="Wrap" />
+                            <Setter Property="VerticalAlignment" Value="Center" />
+                            <Setter Property="Margin" Value="5"/>
+                        </Style>
+                    </DataGridTextColumn.ElementStyle>
+                </DataGridTextColumn>
+                <DataGridTemplateColumn Header="Go to account">
                     <DataGridTemplateColumn.CellTemplate>
                         <DataTemplate>
                             <Button Content="Go" Click="_viewItemButton_Click"  Margin="4"/>
