--- a/GUI/Views/DuplicatedPasswordsWarningView.xaml
+++ b/GUI/Views/DuplicatedPasswordsWarningView.xaml
@@ -1,11 +1,11 @@
-﻿<Window x:Class="Upsilon.Apps.Passkey.GUI.Views.AccountPasswordsWarningView"
+﻿<Window x:Class="Upsilon.Apps.Passkey.GUI.Views.DuplicatedPasswordsWarningView"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:Upsilon.Apps.Passkey.GUI.Views"
         xmlns:viewmodels="clr-namespace:Upsilon.Apps.Passkey.GUI.ViewModels"
-        d:DataContext="{d:DesignInstance Type=viewmodels:AccountPasswordsWarningViewModel}"
+        d:DataContext="{d:DesignInstance Type=viewmodels:DuplicatedPasswordsWarningViewModel}"
         mc:Ignorable="d"
         WindowState="Maximized"
         WindowStartupLocation="CenterScreen"
@@ -13,51 +13,27 @@
         MinHeight="700"
         MinWidth="1300">
     <Grid>
-        <Grid.RowDefinitions>
-            <RowDefinition Height="Auto"/>
-            <RowDefinition Height="*"/>
-        </Grid.RowDefinitions>
-        <StackPanel Grid.Row="0">
-            <GroupBox Header="Filters : ">
-                <Grid>
-                    <Grid.ColumnDefinitions>
-                        <ColumnDefinition Width="Auto"/>
-                        <ColumnDefinition Width="*"/>
-                        <ColumnDefinition Width="Auto"/>
-                        <ColumnDefinition Width="*"/>
-                        <ColumnDefinition Width="Auto"/>
-                    </Grid.ColumnDefinitions>
-
-                    <Label Grid.Column="0"
-                           Content="Warning type :"/>
-                    <ComboBox Name="_warningType_CB" SelectedItem="{Binding ReadableWarningType, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}"
-                              Grid.Column="1"/>
-                    <Label Grid.Column="2"
-                           Content="Text :"/>
-                    <TextBox Grid.Column="3"
-                             Text="{Binding Text, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}"/>
-                    <Button Grid.Column="4"
-                            Content="✕"
-                            Click="_filterClear_Button_Click"/>
-                </Grid>
-            </GroupBox>
-        </StackPanel>
-        <DataGrid Name="_warnings_DGV" Grid.Row="1" AutoGenerateColumns="False">
+        <Grid.ColumnDefinitions>
+            <ColumnDefinition Width="Auto"/>
+            <ColumnDefinition Width="*"/>
+        </Grid.ColumnDefinitions>
+        <ListBox Grid.Column="0"
+                 Name="_warnings_LB"
+                 ScrollViewer.VerticalScrollBarVisibility="Auto">
+            <ListBox.ItemTemplate>
+                <DataTemplate>
+                    <Label Margin="0"
+                            Content="{Binding DuplicatedPassword}"
+                            Background="Transparent"/>
+                </DataTemplate>
+            </ListBox.ItemTemplate>
+        </ListBox>
+        <DataGrid Grid.Column="1"
+                  Name="_warnings_DGV"
+                  AutoGenerateColumns="False">
             <DataGrid.Columns>
-                <DataGridTextColumn Header="Warning type"
-                                    IsReadOnly="True"
-                                    Width="Auto"
-                                    Binding="{Binding ReadableWarningType}"
-                                    CanUserSort="True">
-                    <DataGridTextColumn.ElementStyle>
-                        <Style TargetType="TextBlock">
-                            <Setter Property="VerticalAlignment" Value="Center" />
-                            <Setter Property="Margin" Value="5"/>
-                        </Style>
-                    </DataGridTextColumn.ElementStyle>
-                </DataGridTextColumn>
                 <DataGridTextColumn Header="Service"
-                                    Width="*"
+                                    Width="Auto"
                                     IsReadOnly="True"
                                     Binding="{Binding ServiceString}"
                                     CanUserSort="True">
