--- a/GUI/Views/DuplicatedPasswordsWarningView.xaml
+++ b/GUI/Views/DuplicatedPasswordsWarningView.xaml
@@ -7,7 +7,7 @@
         xmlns:viewmodels="clr-namespace:Upsilon.Apps.Passkey.GUI.ViewModels"
         d:DataContext="{d:DesignInstance Type=viewmodels:DuplicatedPasswordsWarningViewModel}"
         mc:Ignorable="d"
-        WindowState="Maximized"
+        Topmost="True"
         WindowStartupLocation="CenterScreen"
         Title="{Binding Title}"
         MinHeight="500"
